# smart-cruise

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  citation.cff  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/presentation/: authors.doctree  contributing.doctree  history.doctree  index.doctree  installation.doctree  readme.doctree
.doctrees/reference/: index.doctree
.doctrees/tutorials/: index.doctree  using.doctree
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  docs.yml  release.yml
.run/: All tests.run.xml  Generate docs.run.xml
_modules/: index.html
_modules/smart_cruise/: jit.html  models.html  smart_cruise.html
_sources/: index.md.txt
_sources/reference/: cruise.md.txt  index.md.txt
docs/: conf.py  index.md
docs/presentation/: installation.md
docs/reference/: core.md  cruise.md  models.md
docs/tutorials/: index.md  using.ipynb
opti_cruise/: __init__.py  opti_cruise.py
presentation/: authors.html  contributing.html  history.html  index.html  installation.html  readme.html
reference/: core.html  cruise.html  index.html  models.html
smart_cruise/: __init__.py  jit.py  models.py  smart_cruise.py  utils.py
tests/: __init__.py
tutorials/: index.html  using.html  using.ipynb
