[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opti-cruise"
version = "0.1.1"
description = "Find Pareto-optimal cruise trajectories to optimize energy consumption and travel time for any vehicle with state-dependent costs."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "optimization",
    "dynamic-programming",
    "pareto",
    "trajectory",
    "energy",
    "cruise",
    "aircraft",
    "uav",
    "auv",
    "vehicle",
]
authors = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
maintainers = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
license = "MIT"
dependencies = [
    "dill>=0.4.0",
    "matplotlib>=3.10.3",
    "numba>=0.63.0",
    "zstandard>=0.23.0",
]

[project.urls]
Repository = "https://github.com/balouf/opti-cruise"
Documentation = "https://balouf.github.io/opti-cruise"

[dependency-groups]
dev = [
    "ipython>=8.35.0",
    "myst-parser[linkify]>=4.0.1",
    "nbsphinx>=0.9.7",
    "pydata-sphinx-theme>=0.16.1",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "sphinx-copybutton>=0.5.2"
]



[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["opti_cruise"]

[tool.coverage.html]
directory = "cov"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov --cov-config=pyproject.toml --cov-report xml --cov-report html --showlocals --capture=no --exitfirst --failed-first"
